--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,28 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="<%= url_for(root_path) %>">MyWallet</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="<%= url_for(info_path) %>">About</a>
-            </li>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="<%= url_for(info_path) %>">About</a>
+        </li>
+        <% if user_signed_in? %>
             <li class="nav-item active">
                 <a class="nav-link" href="<%= url_for(edit_setting_path(@setting)) %>">Settings</a>
             </li>
-            <% if user_signed_in? %>
-                <li class="nav-item active">
-                    <a class="nav-link" href="<%= url_for(destroy_user_session_path) %>" data-method="delete">Sign out</a>
-                </li>
-            <% else %>
-                <li class="nav-item active">
-                    <a class="nav-link" href="sign_up">Sign up</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="sign_in">Sign in</a>
-                </li>
-            <% end %>
-        </ul>
-    </div>
+        <% end %>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %>
+            <li class="nav-item active">
+                <a class="nav-link" href="<%= url_for(destroy_user_session_path) %>" data-method="delete">Sign out</a>
+            </li>
+        <% else %>
+            <li class="nav-item active">
+                <a class="nav-link" href="<%= url_for(new_user_registration_path) %>" >Sign up</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="<%= url_for(new_user_session_path) %>" >Sign in</a>
+            </li>
+        <% end %>
+    </ul>
 </nav>
